[package]
name = "the_logger"
description = "A very simple but customizable logger for Rust"
version = "0.5.0"
edition = "2021"
authors = ["Tomas Ponce <nacho.ponce25@gmail.com"]
keywords = ["logger", "log", "debug", "message", "file"]
repository = "https://github.com/tommyHellraiser/the_logger"
categories = ["config", "value-formatting", "development-tools::build-utils", "development-tools::debugging", "development-tools::testing"]
license = "MIT"
exclude = ["todos.md"]

[dependencies]
lazy_static = "1.4.0"
tokio = { version = "1.35.0", features = ["sync"] }
chrono = { version = "0.4.19" }
serde = { version = "1.0.193", optional = true }
serde_json = { version = "1.0.108", optional = true }

[features]
json_config = ["serde", "serde_json"]